# device-detector

./: README.md  device-detector.opam  dune-project
lib/: device_detector.ml  device_detector.mli  dune  referer.ml  referer_favicon.ml
test/: dune  referers.ml
